--- a/magefiles/tmpl/README.md.tmpl
+++ b/magefiles/tmpl/README.md.tmpl
@@ -1,6 +1,6 @@
 # goutils/v2/{{.PackageName}}
 
-The {{.PackageName}} package is a collection of utility functions 
+The `{{.PackageName}}` package is a collection of utility functions 
 designed to simplify common {{.PackageName}} tasks.
 
 Table of contents:
