Update function documentation format
- Modified the format of function documentation in the README.md file and the generated documentation.
- Added support for displaying the struct name before the function name if it exists.
- Updated the function signature format in the template to include parameters only if they are present.
- Updated the createFunctionDoc function to extract the struct name from receiver expressions.
- Updated the template to conditionally display the struct name and
  parameters in the function documentation.

--- a/magefiles/tmpl/README.md.tmpl
+++ b/magefiles/tmpl/README.md.tmpl
@@ -16,7 +16,7 @@ Table of contents:
 
 ## Functions
 {{range .Functions}}
-### {{.Name}} ({{.Params}})
+### {{if .StructName}}{{.StructName}}{{end}}{{.Name}}{{if .Params}}({{.Params}}){{end}}
 
 ```go
 {{.Signature}}
