Doc gen mage (#404)
* Removed panic from test - non-idiomatic practice

* Fixed non-idiomatic practices

* Refine docgen: Update README templates for magefiles

- Omit Installation, Usage, and Tests sections specifically for `magefiles` README.
- Enhance function documentation with example usages and more concise structure.

* Clean up and refine documentation generation logic

- Removed redundant debugging and print statements from `docGeneration.go`.
- Improved and adjusted descriptions in magefiles' READMEs.
- Modified the template logic to better describe magefiles package.
- Condensed code by removing unnecessary comments and lines.

* Refactor TestCreatePackageDocs for DRYness and clarity

- Utilized helper functions `initBaseFs`, `initCommonDirs`, and `copyFilesToFs` to reduce redundancy in the setup of in-memory file systems for the test cases.
- Removed unused `printFs` function which was previously used for debugging purposes.
- Streamlined file copying process by using the `copyFilesToFs` function to reduce repetitive logic.

* Resolved formatting issues in the magefile comments

--- a/magefiles/tmpl/README.md.tmpl
+++ b/magefiles/tmpl/README.md.tmpl
@@ -1,14 +1,15 @@
 # goutils/v2/{{.PackageName}}
 
-The `{{.PackageName}}` package is a collection of utility functions
+{{if ne .PackageName "magefiles"}}The `{{.PackageName}}` package is a collection of utility functions
 designed to simplify common {{.PackageName}} tasks.
-
+{{else}}`{{.PackageName}}` provides utilities that would normally be managed
+and executed with a `Makefile`.{{end}}
 Table of contents:
 
-- [Functions](#functions)
+- [Functions](#functions){{if ne .PackageName "magefiles"}}
 - [Installation](#installation)
 - [Usage](#usage)
-- [Tests](#tests)
+- [Tests](#tests){{end}}
 - [Contributing](#contributing)
 - [License](#license)
 
@@ -24,7 +25,7 @@ Table of contents:
 
 {{.Description}}
 ---
-{{end}}
+{{end}}{{if ne .PackageName "magefiles"}}
 ## Installation
 
 To use the goutils/v2/{{.PackageName}} package, you first need to install it.
@@ -57,7 +58,7 @@ go test -v
 ```
 
 ---
-
+{{end}}
 ## Contributing
 
 Pull requests are welcome. For major changes,
