Enhance documentation and update dependencies
- Updated table of contents to be a header.
- Added more details to the generated magefiles README.
- Fixed the broken pre-commit action.
- Updated mage go.mod to the latest version of goutils.

--- a/magefiles/tmpl/README.md.tmpl
+++ b/magefiles/tmpl/README.md.tmpl
@@ -3,8 +3,12 @@
 {{if ne .PackageName "magefiles"}}The `{{.PackageName}}` package is a collection of utility functions
 designed to simplify common {{.PackageName}} tasks.
 {{else}}`{{.PackageName}}` provides utilities that would normally be managed
-and executed with a `Makefile`.{{end}}
-Table of contents:
+and executed with a `Makefile`. Instead of being written in the make language,
+magefiles are crafted in Go and leverage the [Mage](https://magefile.org/) library.
+{{end}}
+---
+
+## Table of contents
 
 - [Functions](#functions){{if ne .PackageName "magefiles"}}
 - [Installation](#installation)
